Fix image transparency on dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -107,4 +107,7 @@ body {
     
   }
   
+  img {
+    background-color: transparent;
+  }
 }
